--- a/styles/global.css
+++ b/styles/global.css
@@ -5,3 +5,24 @@
 html {
     scroll-behavior: smooth;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+ 
+
+
+/* Colores personalizados */ 
+
+.colorDePortada {
+    background-color: rgb(221, 221, 219);
+} 
+
+.colorDelMenu {
+    background-color: rgb(147, 147, 147);
+}
+
+.colorDePieDePagina {
+    background-color: rgb(0, 0, 0);
+}
